--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-node_modules
+/node_modules
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
