--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=Inventix
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ulULSskbEJS6bvTZlrAXNybxtnefTtayEkoxkaGGBUo=
+APP_KEY=base64:XV7RYqO99hZXJkV+bIjMZ9AnbuHYUFe1SNWeoDqqFeM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,13 +10,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=italyinventory
-DB_USERNAME=root
-DB_PASSWORD=password
+
+DB_DATABASE=kinetix_inventory
+DB_USERNAME=kinetix_inventory
+DB_PASSWORD=12345678
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+QUEUE_DRIVER=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -26,12 +29,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_PORT=587
+MAIL_USERNAME=b8ff42bda57eed
+MAIL_PASSWORD=47615e310b9a0b
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -45,3 +46,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+MAIL_FROM_ADDRESS = "company@gmail.com"
+MAIL_FROM_NAME = "Company"
